--- a/css/responsive.css
+++ b/css/responsive.css
@@ -13,36 +13,57 @@
     flex-wrap: nowrap !important;
   }
 
+  .profile{
+    display: none!important;
+  }
+
+  .profile-ul{
+    display: block!important;
+    padding: 2rem 0rem!important;
+  }
+
+  .profile-wrapper{
+    display: inline-block!important;
+  }
+
+  .profile-wrapper i{
+    font-size: 5rem!important;
+    border-radius: 50px!important;
+    color: var(--white)!important;
+    transform: scale(1.2);
+  }
+
+  .profile-wrapper h2{
+    color: var(--white)!important;
+    margin-top: 2rem!important;
+    font-size: 1rem!important;
+  }
+
   .list {
     position: relative !important;
     width: 100% !important;
     position: fixed !important;
-    opacity: 0 !important;
+    opacity: 1 !important;
     top: 50% !important;
     left: -50% !important;
     transform: translate(-50%, -50%) !important;
-    transition: all 0.2s ease-in-out !important;
+    transition: all 0.1s ease-in-out !important;
   }
   .list.show {
-    position: relative !important;
-    width: 100% !important;
-    position: fixed !important;
     opacity: 1 !important;
-    top: % !important;
     left: 50% !important;
-    transform: translate(-50%, -50%) !important;
   }
 
   .list ul {
     width: 90% !important;
     border-radius: 4px !important;
     padding: 1rem 0rem !important;
-    background-color: var(--bold-dark)!important;
+    background-color: var(--bold-dark) !important;
     margin: 0 auto !important;
     display: block !important;
     text-align: center;
     box-shadow: var(--box-shadow) !important;
-    padding: 2rem 0rem !important;
+    padding: 2rem 2rem !important;
   }
   .list ul li {
     margin: 0px !important;
@@ -51,7 +72,7 @@
 
   .list ul li a {
     font-size: 1.2rem !important;
-    color: var(--white)!important;
+    color: var(--white) !important;
   }
 
   .hamburger {
@@ -71,7 +92,7 @@
   }
 
   .search:hover > .input input {
-    width: 178px !important;
+    width: 200px !important;
   }
 
   .slider-wrapper {
@@ -84,20 +105,27 @@
   }
 }
 
-@media (max-width: 692px) {
-  .products {
-    grid-template-columns: 1fr !important;
-    grid-gap: 2rem !important;
-    text-align: center!important;
+@media(max-width: 800px) {
+  .latest-product-wrapper{
+    grid-template-columns: repeat(3, 1fr)!important;
   }
+}
 
+@media (max-width: 692px) {
   .products .img img {
     width: 60% !important;
   }
 
-  .glider-prev, .glider-next{
-    display: none!important;
+  .glider-prev,
+  .glider-next {
+    display: none !important;
   }
+
+  .top-products-wrapper {
+    grid-template-columns: 1fr !important;
+  }
+
+  
 }
 
 @media (max-width: 541px) {
@@ -106,15 +134,14 @@
   }
 
   .search:hover > .input input {
-    width: 128px !important;
+    width: 158px !important;
+  }
+  .products {
+    grid-gap: 1rem !important;
   }
 
-  .top-products-wrapper{
-      overflow-x: auto!important;
-      grid-template-columns: repeat(3, 1fr)!important;
-  }
-  .products{
-    grid-gap: 1rem!important;
+  .latest-product-wrapper{
+    grid-template-columns: repeat(2, 1fr)!important;
   }
 }
 @media (max-width: 434px) {
@@ -123,6 +150,6 @@
   }
 
   .search:hover > .input input {
-    width: 88px !important;
+    width: 110px !important;
   }
 }
