--- a/css/global.css
+++ b/css/global.css
@@ -1,3 +1,19 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+  
+  body {
+    font-family: "Lato", sans-serif;
+    overflow-x: hidden;
+  }
+  
+  html{
+      font-size: 16px;
+      height: 10000px;
+  }
+
 .container{
     width: 1228px;
     max-width: 90%;
