--- a/css/responsive.css
+++ b/css/responsive.css
@@ -47,7 +47,7 @@
     top: 50% !important;
     left: -50% !important;
     transform: translate(-50%, -50%) !important;
-    transition: all 0.1s ease-in-out !important;
+    transition: all 0.2s ease-in-out !important;
   }
   .list.show {
     opacity: 1 !important;
@@ -103,6 +103,10 @@
     text-align: center !important;
     padding: 2rem 0rem !important;
   }
+
+  .accessories-wrapper{
+    grid-template-columns: repeat(4, 1fr)!important;
+  }
 }
 
 @media(max-width: 800px) {
@@ -123,6 +127,10 @@
 
   .top-products-wrapper {
     grid-template-columns: 1fr !important;
+  }
+
+  .accessories-wrapper{
+    grid-template-columns: repeat(3, 1fr)!important;
   }
 
   
